--- a/source/styles/sections/form_one.scss
+++ b/source/styles/sections/form_one.scss
@@ -4,6 +4,10 @@
     background-size: cover;
     margin: -5px 0 0;
 
+    @media (max-width: 799px) {
+        height: 350px;
+    }
+
     &__outer {
         display: none;
     }
@@ -11,10 +15,6 @@
     &__inner {
         height: 100%;
         background: rgba(red, 0.4);
-    }
-
-    .container {
-
     }
 
     &__title {
@@ -29,6 +29,13 @@
         color: #fff;
         border-bottom: 2px solid #fff;
         margin: 5px auto 31px;
+
+        @media (max-width: 799px) {
+            width: 100%;
+            padding: 76px 0 7px;
+            font-size: 25px;
+            margin: 5px auto 20px;
+        }
     }
 
     &__button {
@@ -51,6 +58,11 @@
 
             &:hover {
                 box-shadow: 0 0 10px 3px rgba(#fff, 0.4);
+            }
+
+            @media (max-width: 799px) {
+                width: 290px;
+                font-size: 18px;
             }
         }
     }
