--- a/source/template/sections/tenth.pug
+++ b/source/template/sections/tenth.pug
@@ -2,8 +2,8 @@ section.tenth.is-decor--top-right.is-decor--bottom-left
     .tenth__outer
         .container
             .tenth__title
-                .tenth__title--red Добро пожаловать в офис!
-                .tenth__title--dark Давайте знакомиться:
+                span.tenth__title--red Добро пожаловать в офис!&nbsp;
+                span.tenth__title--dark Давайте знакомиться:
             .tenth__logo
                 img(src="images/tenth/logo_dark.png")
                 
