--- a/source/template/sections/third.pug
+++ b/source/template/sections/third.pug
@@ -3,7 +3,7 @@ section.third.is-decor--top-right.is-decor--bottom-left
         .container
             .third__title
                 | Мы докажем, что Вы можете быть <br>
-                span успешным владельцем кибер-клуба
+                span успешным владельцем кибер&#8209;клуба
             .third__content
                 .third__content-decor
                     .third__content-decor--angle
