--- a/source/styles/sections/eighth.scss
+++ b/source/styles/sections/eighth.scss
@@ -14,6 +14,11 @@
         text-transform: uppercase;
         color: #bf1e2e;
 
+        @media (max-width: 799px) {
+            padding: 31px 15px 39px;
+            
+        }
+
         span {
             display: block;
             font-size: 20px;
@@ -100,6 +105,10 @@
         align-items: flex-start;
         flex-wrap: wrap;
         padding: 0 0 0 100px;
+
+        @media (max-width: 799px) {
+            padding: 0 0 0 25px;
+        }
     }
 
     &__user {
@@ -109,6 +118,11 @@
         align-items: flex-start;
         width: 50%;
         margin: 0 0 -9px;
+
+        @media (max-width: 799px) {
+            width: 100%;
+            margin: 0 0 10px;
+        }
     }
 
     &__user-photo {
