--- a/source/styles/sections/fifth.scss
+++ b/source/styles/sections/fifth.scss
@@ -3,14 +3,6 @@
     background-size: cover;
     overflow: hidden;
 
-    &__outer {
-
-    }
-
-    &__inner {
- 
-    }
-
     &__title {
         padding: 35px 0 0;
         font-size: 25px;
@@ -21,6 +13,10 @@
         line-height: 1.2;
         text-align: left;
         margin: 0 0 16px;
+
+    @media (max-width: 799px) {
+        font-size: 22px;
+    }
 
         span {
             padding: 0 10px 0 0;
@@ -38,9 +34,19 @@
     &__grafics-ciber {
         width: 640px;
         margin: 0 auto 26px;
+
+        @media (max-width: 799px) {
+            width: 100%;
+        }
     }
 
     &__grafics-image img {
+
+        @media (max-width: 799px) {
+            width: 100%;
+            max-width: 640px;
+            height: 300px;
+        }
 
     }
     
@@ -49,6 +55,10 @@
         font-family: "RoadRadio";
         font-size: 20px;
         margin: 0 0 22px;
+
+        @media (max-width: 799px) {
+            font-size: 18px;
+        }
 
         br {
             display: none;
