--- a/source/styles/sections/third.scss
+++ b/source/styles/sections/third.scss
@@ -13,10 +13,17 @@
         text-transform: uppercase;
         line-height: 1.2;
         text-align: center;
-
+        
         span {
             padding: 0 10px 0 0;
             color: #000;
+        }
+        
+        @media (max-width: 799px) {
+            width: 110%;
+            font-size: 25px;
+            background-color: #fff;
+            margin: 0 0 9px -5%;
         }
     }
 
@@ -76,6 +83,10 @@
         width: 100%;
         height: 100%;
 
+        @media (max-width: 799px) {
+            display: none;
+        }
+
         .icon {
             position: absolute;
             left: calc(50% - 15px);
@@ -110,6 +121,11 @@
         padding: 0;
         text-align: center;
         margin: 0 0 84px;
+
+        @media (max-width: 799px) {
+            width: 100%;
+            margin: 0 0 11px;
+        }
     }
 
     &__item-img {
