--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -4,7 +4,7 @@ html(lang='ru')
         meta(charset='UTF-8')
         meta(http-equiv='X-UA-Compatible', content="IE=edge")
         meta(name='viewport' content='width=device-width')
-        link(rel="stylesheet"  media="(min-width: 768px)" href="css/main.min.css")
+        link(rel="stylesheet"  media="(min-width: 320px)" href="css/main.min.css")
         link(rel="stylesheet"  media="(min-width: 1200px)" href="images/main.min.css")
         title CyberX
     body
@@ -19,7 +19,7 @@ html(lang='ru')
         include sections/eighth
         include sections/ninth
         include sections/tenth
-        include sections/eleventh
+        //- include sections/eleventh
         include sections/twelfth
         include sections/thirteenth
         //- include sections/fourteenth
