--- a/source/template/sections/thirteenth.pug
+++ b/source/template/sections/thirteenth.pug
@@ -2,8 +2,8 @@ section.thirteenth.is-decor--top-left.is-decor--bottom-right
     .thirteenth__outer
         .container
             .thirteenth__title
-                .thirteenth__title--red CyberX - самая прозрачная франшиза 
-                .thirteenth__title--dark в сфере развлечений
+                span.thirteenth__title--red CyberX - самая прозрачная франшиза 
+                span.thirteenth__title--dark в сфере развлечений
             .thirteenth__inner
                 .thirteenth__content
                     .thirteenth__player
